samples/_failures_safe/1761526611_d8124e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2193a021.c: In function ‘main’:
./samples/SAFE/__tmp_2193a021.c:148:5: error: expected declaration or statement at end of input
  148 |     if (memcmp(input_data, decompressed.data, data_size) != 0) {
      |     ^~
./samples/SAFE/__tmp_2193a021.c:148:5: error: expected declaration or statement at end of input
